fixed bg image // fixed mobile overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,16 +8,24 @@ body {
     -webkit-transition: opacity 2s;
     /* Safari */
     overflow-y: scroll;
+    overflow-x: hidden;
+
 }
 
 html {
     font-family: sofia-pro;
     font-size: 16px;
+    overflow-x: hidden;
+
 }
 
 .window-wrapper {
     overflow-x: hidden;
     position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    width: 100%;
 
 }
 
@@ -28,7 +36,7 @@ html {
     height: 700px;
     position: absolute;
     left: 30%;
-    top: 40%;
+    top: 300px;
     z-index: -10;
     /*
     Nope =(
@@ -113,8 +121,8 @@ html {
     position: absolute;
     left: -200px;
     top: 1700px;
-    width: 563px;
-    height: 563px;
+    width: 600px;
+    height: 600px;
     background-image: url('/src/images/background-image-4.svg');
     background-repeat: no-repeat;
     background-position: center;
